--- a/ML_semester3.ipynb
+++ b/ML_semester3.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 597,
+   "execution_count": 780,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 598,
+   "execution_count": 781,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 599,
+   "execution_count": 782,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 600,
+   "execution_count": 783,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +543,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 600,
+     "execution_count": 783,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 601,
+   "execution_count": 784,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +574,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 601,
+     "execution_count": 784,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 602,
+   "execution_count": 785,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 603,
+   "execution_count": 786,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +643,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 603,
+     "execution_count": 786,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 604,
+   "execution_count": 787,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 605,
+   "execution_count": 788,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 606,
+   "execution_count": 789,
    "metadata": {},
    "outputs": [
     {
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 607,
+   "execution_count": 790,
    "metadata": {},
    "outputs": [
     {
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 608,
+   "execution_count": 791,
    "metadata": {},
    "outputs": [
     {
@@ -996,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 609,
+   "execution_count": 792,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 610,
+   "execution_count": 793,
    "metadata": {},
    "outputs": [
     {
@@ -1408,7 +1408,7 @@
        "[33206 rows x 22 columns]"
       ]
      },
-     "execution_count": 610,
+     "execution_count": 793,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1451,7 +1451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 611,
+   "execution_count": 794,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1462,7 +1462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 612,
+   "execution_count": 795,
    "metadata": {},
    "outputs": [
     {
@@ -1800,7 +1800,7 @@
        "[33206 rows x 17 columns]"
       ]
      },
-     "execution_count": 612,
+     "execution_count": 795,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1811,7 +1811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 613,
+   "execution_count": 796,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1820,7 +1820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 614,
+   "execution_count": 797,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1851,7 +1851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 615,
+   "execution_count": 798,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1865,6 +1865,31 @@
     "#X_resampled, y_resampled = smote.fit_resample(X, y)\n",
     "#\n",
     "#print(y_resampled.value_counts())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ADASYN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 799,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#from imblearn.over_sampling import ADASYN\n",
+    "#\n",
+    "#\n",
+    "#X = train.drop(columns=['stroke'])\n",
+    "#y = train['stroke']\n",
+    "#\n",
+    "#adasyn = ADASYN(random_state=42)\n",
+    "#X_resampled, y_resampled = adasyn.fit_resample(X, y)\n",
+    "#\n",
+    "#print(y_resampled.value_counts())"
    ]
   },
   {
@@ -1885,7 +1910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 616,
+   "execution_count": 800,
    "metadata": {},
    "outputs": [
     {
@@ -1921,7 +1946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 617,
+   "execution_count": 801,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1939,7 +1964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 618,
+   "execution_count": 802,
    "metadata": {},
    "outputs": [
     {
@@ -2209,7 +2234,7 @@
        "max                 1.000000      1.000000  "
       ]
      },
-     "execution_count": 618,
+     "execution_count": 802,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2236,7 +2261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 619,
+   "execution_count": 803,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2254,7 +2279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 620,
+   "execution_count": 804,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2503,7 +2528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 621,
+   "execution_count": 805,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2517,7 +2542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 628,
+   "execution_count": 806,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2535,7 +2560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 629,
+   "execution_count": 807,
    "metadata": {},
    "outputs": [
     {
@@ -2556,7 +2581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 630,
+   "execution_count": 814,
    "metadata": {},
    "outputs": [
     {
@@ -2657,7 +2682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 625,
+   "execution_count": 809,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2668,7 +2693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 626,
+   "execution_count": 810,
    "metadata": {},
    "outputs": [
     {
@@ -2677,15 +2702,15 @@
      "text": [
       "Best hyerparameters:\n",
       " {'C': 100, 'kernel': 'rbf'}\n",
-      "F1 Score 0.5315315315315315\n",
+      "F1 Score 0.5819672131147541\n",
       "classification_report:\n",
       "               precision    recall  f1-score   support\n",
       "\n",
       "           0       0.99      1.00      0.99      6519\n",
-      "           1       0.81      0.40      0.53       149\n",
+      "           1       0.75      0.48      0.58       149\n",
       "\n",
       "    accuracy                           0.98      6668\n",
-      "   macro avg       0.90      0.70      0.76      6668\n",
+      "   macro avg       0.87      0.74      0.79      6668\n",
       "weighted avg       0.98      0.98      0.98      6668\n",
       "\n"
      ]
@@ -2723,14 +2748,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 627,
+   "execution_count": 811,
    "metadata": {},
    "outputs": [],
    "source": [
     "SVM_pred = clf.predict(test)\n",
     "SVM_pred_df = test_data_ids.to_frame()\n",
     "SVM_pred_df['stroke'] = SVM_pred\n",
-    "SVM_pred_df.to_csv('SVM_pred_11.csv', index=False)"
+    "SVM_pred_df.to_csv('SVM_pred_13.csv', index=False)"
    ]
   },
   {
